# Chessington-Python

./: README.md  pyproject.toml
chessington/: __init__.py  app.py
chessington/engine/: board.py  data.py  pieces.py
chessington/ui/: __init__.py  images.py
tests/: test_pieces.py
