[tool.poetry]
name = "chessington"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [
  {include = "chessington"}
]

[tool.poetry.dependencies]
python = "^3.10"
tk = "^0.1.0"
pillow = "^9.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[tool.poetry.scripts]
start = "chessington:main"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
